# spotify-playlist-builder

./: .gitignore  Book.md  LICENSE  README.md  build.sh
extension/: manifest.json  manifest_cr.json  manifest_ff.json  popup.html  popup.js
extension/js/: background.js  content.js  popup.html  popup.js
extension/js/wasm/: wasm_mod.js  wasm_mod_bg.wasm
extension/js/wasm/snippets/wasm_mod-bc4ca452742d1bb1/src/: progress.js
wasm_mod/: .gitignore  Cargo.toml  build.bat
wasm_mod/samples/: add-track.json  add-track.txt  add-tracks.txt  fetch-playlist-contents.json  fetch-playlist-contents.txt  fetch-playlist-meta.json  fetch-playlist-meta.txt  fetch-playlist-resp.json  fetch-playlist.txt  fetchLibraryTracks-resp.json  fetchLibraryTracks.txt  get-album-name-tracks.json  get-album-name-tracks.txt  getAlbum-resp.json  getAlbum.txt  library-playlists.txt  libraryV3-albums-resp.json  libraryV3-playlists-resp.json
wasm_mod/src/: api_wrappers.rs  client.rs  constants.rs  fetch-playlist-resp.json  lib.rs  models.rs  progress.js  utils.rs
wasm_mod/src/api_wrappers/: utils.rs
wasm_mod/src/models/: album_tracks.rs  albums_playlists.rs  playlist.rs
wasm_mod/tests/: web.rs
