[package]
name       = "wasm_mod"
version    = "0.1.0"
edition    = "2021"
authors    = [ "Stanislav Berrigan" ]
homepage   = "https://github.com/theberrigan/rust-wasm-chrome-ext"
repository = "https://github.com/theberrigan/rust-wasm-chrome-ext"

[lib]
crate-type = [
    "cdylib",
    "rlib"
]

[features]
default = [
    "console_error_panic_hook"
]

[dependencies]
wasm-bindgen = "0.2.86"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.36"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
